<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WiseWeather</string>
    <string name="action_settings">Settings</string>
    <string name="forecast_title"></string>
    <string name="your_forecast">Your Forecast</string>
    <string name="back">Back</string>
    <string name="save_home_zip">Save Home Zip</string>
    <string name="view_json">View JSON</string>
    <string name="enter_zip_code">Enter Zip Code</string>
    <string name="wiseweather_forecast">WiseWeather Forecast</string>
    <string name="new_forecast">New Forecast</string>
    <string name="home_forecast">Home Forecast</string>
    <string name="logo">Logo</string>
    <string name="change_log">Change Log</string>
    
    <string name="title_changelog">Change log</string>
    <string name="changelog_close">Close</string>
    <string name="click_the_icon_to_view_a_new_forecast">Click the icon to view a new forecast</string>
    <string name="finished">Finished</string>
    <string name="temp">TEMP</string>
    <string name="zip_code">Zip Code</string>
    <string name="widgettext">Click the icon to set the widget zip code</string>
    <string name="wiseweather_widget">WiseWeather Widget</string>

</resources>