<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
        style="@style/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wiseweather_widget" />
    <EditText
        android:id="@+id/widgetZip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="1234567890"
        android:hint="@string/enter_zip_code"
        android:inputType="numberDecimal" />
    <TextView
        style="@style/Forecast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/widgettext" />
    <ImageView
        android:id="@+id/widgetButton"
        android:clickable="true"
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_launcher"/>
</LinearLayout>